--- a/_config.yml
+++ b/_config.yml
@@ -11,5 +11,5 @@ redcarpet:
     - fenced_code_blocks
 flacon:
   release:
-    version: 0.9.4
-    link: https://github.com/flacon/flacon/archive/v0.9.4.tar.gz
+    version: 1.0.0
+    link: https://github.com/flacon/flacon/archive
