--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -24,7 +24,7 @@
   highlight: false  
 
 - name: GitHub
-  link: https://github.com/flacon/flacon/issues
+  link: https://github.com/flacon/flacon
   new_window: true
   highlight: false  
 
